# yt-dlp-v1

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Deploy.md  Dockerfile  Guide-n8n-Operations.md  Guide-n8n-Workflow-GenerateScreenshots-VideoTranscription.md  HARIRI-Notes.md  Plan-Screenshots-Jobs-System.md  Procfile  README.md  Supabase-Functions-Usage.md  batch_download.py  cookies.txt  docker-compose.yml  docs-home.md  example.env  extract_browser_cookies.py  extract_cookies_json.py  handler.py  main.py  nixpacks.toml  patreon_auto_login.py  patreon_cookies.json  patreon_cookies.txt  patreon_cookies_clean.txt  patreon_login.py  pyproject.toml  pytest.ini  requirements.txt  test_batch_request.json
.claude/: settings.json
PM/: Plan-Refactor-main-1.md
app/: __init__.py  config.py  dependencies.py
docs/: Plan-Screenshots.md  Testing-Guide.md  Wave-4-Test-Suite-Summary.md  Youtube-Cookies-Export.md  batch-download-api.md  clean-api-architecture.md  composable-workflows.md  concurrency-and-scaling.md  concurrency-limits.md  cookie-scheduler-setup.md  deno-setup.md  docs-home.md  endpoint-flows.md  endpoints-index.md  endpoints-usage.md  local-scripts.md  mps-and-device-selection.md  runpod-deployment.md  supabase-edge-function-runpod.md  supabase-integration.md  transcription-services.md  transcription-setup-guide.md  unicode-handling.md
scripts/: cookie_scheduler.py  refresh_youtube_cookies.py  refresh_youtube_cookies_async.py  transcription_worker.py
tests/: conftest.py  test_extract_audio.py  test_routers.py  test_youtube_cookies.py
(+42 files in other folders)
