[project]
name = "yt-dlp-v1"
version = "0.1.0"
description = "A FastAPI backend using yt-dlp to download and stream videos from YouTube, TikTok, Facebook, Instagram, Twitter, and more."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "requests>=2.31.0",
    "uvicorn>=0.35.0",
    "yt-dlp>=2025.7.21",
]

[tool.uv]
dev-dependencies = []
